[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
description = "Mirai SDK based on mirai-api-http"
repository = "https://github.com/0f-0b/mah-rs"
license = "AGPL-3.0-only"
keywords = ["mirai"]
categories = ["api-bindings"]

[workspace.dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
bytes = "1.9.0"
derive-into-owned = "0.2.0"
enum_dispatch = "0.3.13"
reqwest = { version = "0.12.9", features = ["multipart", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
strum_macros = "0.26.4"
thiserror = "2.0.4"
tokio = "1.42.0"
trim-in-place = "0.1.7"
warp = "0.3.7"
mah_core = { path = "crates/mah_core" }
mah_http_adapter = { path = "crates/mah_http_adapter" }
mah_webhook_adapter = { path = "crates/mah_webhook_adapter" }
