[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
description = "Mirai SDK based on mirai-api-http"
repository = "https://github.com/0f-0b/mah-rs"
license = "AGPL-3.0-only"
keywords = ["mirai"]
categories = ["api-bindings"]

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
bytes = "1.9.0"
derive-into-owned = "0.2.0"
enum_dispatch = "0.3.13"
reqwest = { version = "0.12.12", features = ["multipart", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
strum_macros = "0.26.4"
thiserror = "2.0.11"
tokio = "1.43.0"
tokio-util = "0.7.13"
trim-in-place = "0.1.7"
warp = "0.3.7"
mah_core = { path = "crates/mah_core" }
mah_http_adapter = { path = "crates/mah_http_adapter" }
mah_webhook_adapter = { path = "crates/mah_webhook_adapter" }
