[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
description = "Mirai SDK based on mirai-api-http"
repository = "https://github.com/0f-0b/mah-rs"
license = "AGPL-3.0-only"
keywords = ["mirai"]
categories = ["api-bindings"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.10.1"
derive-into-owned = "0.2.0"
enum_dispatch = "0.3.13"
reqwest = { version = "0.12.23", features = ["multipart", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = "1.47.1"
tokio-util = "0.7.16"
trim-in-place = "0.1.7"
warp = { version = "0.4.2", features = ["server"] }
mah_core = { path = "crates/mah_core" }
mah_http_adapter = { path = "crates/mah_http_adapter" }
mah_webhook_adapter = { path = "crates/mah_webhook_adapter" }
