[package]
name = "mah_webhook_adapter"
version = "0.1.0"
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio.workspace = true
warp.workspace = true
mah_core.workspace = true
